--- a/notebooks/silvia 2023-11-28 group messages.ipynb
+++ b/notebooks/silvia 2023-11-28 group messages.ipynb
@@ -4357,24 +4357,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "print(os.getenv('HAYSTACK_REMOTE_API_TIMEOUT_SEC'))"
+   ]
   },
   {
    "cell_type": "code",
